Button Style Fixes & Spacing
- Fixed button styles & classes
- Adjusted spacing of activity card content

--- a/website-root/src/styles/activity-module.scss
+++ b/website-root/src/styles/activity-module.scss
@@ -49,10 +49,19 @@
     padding: 30px 20px;
     line-height: $line-height-sm;
   }
+  
+  p {
+    padding-right: 20px;
+  }
+  
+  .cta-wrapper {
+    width: 100%;
+  }
 
-  .mdev-base-btn {
+  .tfac-main-cta {
     padding: 15px;
     font-family: $heading-font;
     font-size: $font-size-button;
+    flex-wrap: no-wrap;
   }
 }
